added test for the greeting HTTP endpoint

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ poc.ApplicationKt.module ]
+        modules = [ poc.ApplicationKt.restApiModule ]
     }
 }
