--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-ktor_version=1.4.3
 kotlin.code.style=official
-kotlin_version=1.4.21
-logback_version=1.2.1
+kotlinVersion=1.4.21
+ktorVersion=1.4.3
+logbackVersion=1.2.1
+junitVersion=5.7.0
+kluentVersion=1.61
