enhanced to make the build to produce fat JAR

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
 kotlin.code.style=official
+
+# plugin
+shadowVersion=6.1.0
+
+# dependency
 kotlinVersion=1.4.21
 ktorVersion=1.4.3
 logbackVersion=1.2.1
